--- a/Student Project Repository/views/viewproj.ejs
+++ b/Student Project Repository/views/viewproj.ejs
@@ -33,8 +33,9 @@
 
     <div id="viewproj">
         <div class="container">
-            <h2>RNN for chatbots<br>
-                <small class="text-mutet"><span style="color: #4717f6; font-weight: bold;">❮</span> Deep Learning
+            <h2><%= data[0].title %><br>
+                <small class="text-mutet"><span
+                            style="color: #4717f6; font-weight: bold;">❮</span> <%= data[0].domain %>
                     <span style="color: #4717f6; font-weight: bold;">❯</span></small>
             </h2>
             <hr class="line">
@@ -62,7 +63,8 @@
             </div>
             <br>
             <h5 style="text-align: center">Abstract</h5>
-            <iframe class="viewabstract" src="../ear.pdf"></iframe>
+            <iframe class="viewabstract"
+                    src="https://storage.cloud.google.com/nodejs-d0343.appspot.com/abstract%205d13d41eaafef9d937810919"></iframe>
             <br>
             <br>
             <h5>Files Attached</h5>
