--- a/Student Project Repository/public/stylesheets/template.css
+++ b/Student Project Repository/public/stylesheets/template.css
@@ -15,6 +15,7 @@
 
 
 /* _____________________Header Styles_____________________  */
+
 .header {
     font-family: "Josefin Sans", sans-serif;
     background-color: #0e0b16;
@@ -26,8 +27,9 @@
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 20px;
-    box-shadow: 0px 3px 800px 0px #a239ca;
+    /*box-shadow: 0px 3px 800px 0px #a239ca;*/
     color: #e7dfdd;
+    z-index: 1;
     line-height: 1.0;
   }
 
