--- a/Student Project Repository/views/addProj.ejs
+++ b/Student Project Repository/views/addProj.ejs
@@ -11,8 +11,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-
+    <style>
+        #load{
+            width:100%;
+            height:100%;
+            position:fixed;
+            z-index:9999;
+            background:url("https://www.creditmutuel.fr/cmne/fr/banques/webservices/nswr/images/loading.gif") no-repeat center center rgba(0,0,0,0.25)
+        }
+    </style>
 </head>
 
 <body>
@@ -338,6 +345,7 @@
                             Submit</span></button>
 
             </div>
+
         </form>
     </div>
 </div>
