--- a/Student Project Repository/public/stylesheets/main.css
+++ b/Student Project Repository/public/stylesheets/main.css
@@ -20,6 +20,10 @@
 form {
   padding: 4% 4%;
 }
+
+input:focus {
+    outline: none;
+}
 input {
   font-family: "Teko", sans-serif;
   font-size: 20px;
