--- a/Student Project Repository/views/myproj.ejs
+++ b/Student Project Repository/views/myproj.ejs
@@ -31,9 +31,9 @@
     <div class="row panel-header">
         <div class="col-6 userinfo">
             <h3>
-                Sirish C
+                <%= user[0].username %>
                 <small class="text-muted"><span class="style-dot">•</span>
-                    chejerlasirish@gmail.com
+                    <%= user[0].email %>
                 </small>
             </h3>
         </div>
